src/test/ui/feature-gates/feature-gate-concat_idents.stderr
error[E0658]: `concat_idents` is not stable enough for use and is subject to change
  --> $DIR/feature-gate-concat_idents.rs:5:13
   |
LL |     let a = concat_idents!(X, Y_1);
   |             ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29599
   = help: add #![feature(concat_idents)] to the crate attributes to enable

error[E0658]: `concat_idents` is not stable enough for use and is subject to change
  --> $DIR/feature-gate-concat_idents.rs:6:13
   |
LL |     let b = concat_idents!(X, Y_2);
   |             ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29599
   = help: add #![feature(concat_idents)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
